# streetCryptid

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  app.config.ts  app.json  eas.json  eslint.config.js  justfile  package.json  tsconfig.json
.eas/workflows/: pr-development-builds.yml
.github/workflows/: README-ios-release.md  ci.yml  copilot-setup-steps.yml  ios-release.yml  pr-development-builds.yml  submit-testflight.yml
docs/: map-performance.md  privacy-policy.md
docs/design/: README.md  build_sets.mjs  build_zoom.mjs  mapdata.js  mock_real.html  mock_social.html  zoomdata.js
docs/social/: ARCHITECTURE.md
infra/otel/: README.md  collector-config.yaml  docker-compose.yml  loki.yaml  tempo.yaml
infra/otel/grafana/dashboards/: streetcryptid-pingflow.json
infra/otel/grafana/provisioning/datasources/: datasources.yaml
modules/cryptid-generator/: expo-module.config.json  index.ts  package.json
modules/cryptid-generator/android/: build.gradle
modules/cryptid-generator/ios/: CryptidGenerator.podspec  CryptidGeneratorModule.swift
modules/cryptid-generator/src/: CryptidGenerator.types.ts  CryptidGeneratorModule.ts
modules/iroh-location/: README.md  expo-module.config.json  index.ts  package.json
modules/iroh-location/android/: build.gradle
modules/iroh-location/android/src/main/: AndroidManifest.xml
modules/iroh-location/ios/: IrohLocation.podspec  IrohLocationModule.swift
modules/iroh-location/rust/: Cargo.toml
modules/iroh-location/rust-wasm/: Cargo.toml
modules/iroh-location/rust-wasm/src/: lib.rs
modules/iroh-location/rust/examples/: profile_mvt.rs
modules/iroh-location/rust/src/: ble.rs  crypto.rs  docs.rs  h3.rs  lib.rs  mvt.rs  pairing.rs  profile.rs  relay.rs  telemetry.rs
modules/iroh-location/rust/tests/: pairing_integration.rs
modules/iroh-location/rust/tests/fixtures/: z10_164_357.mvt  z10_164_357.scg1
modules/iroh-location/src/: IrohLocation.types.ts  IrohLocationModule.ts  IrohLocationModule.web.ts  relay-config.ts  stash-config.ts  wasm-assets.d.ts
modules/iroh-location/src/__tests__/: relay-config.test.ts  stash-config.test.ts
patches/: expo-modules-jsi@57.0.3.patch  h3-js@4.5.0.patch  pbf@5.1.2.patch
plugins/: withSharedSigning.js
scripts/: check-uniffi-bindings.sh  eas-build-pre-install.sh  eas-cloud-submit-ci.sh  eas-local-build-ci.sh  generate-uniffi-bindings.sh  make-tile-fixtures.ts  profile-scene.ts  test-eas-ci-log-isolation.sh  verify-tile-server.ts
src/app/: +native-intent.tsx  _layout.tsx  index.tsx  settings.tsx  social.tsx
src/components/: app-tabs.tsx  app-tabs.web.tsx
src/constants/: cryptid-theme.ts  signal-colors.ts  theme.ts
src/features/account/components/: cryptid-account-gate.tsx  cryptid-avatar.tsx  cryptid-generator-dialog.tsx  cryptid-profile-editor.tsx  profile-onboarding-preview.tsx  signal-color-picker.tsx
src/features/account/core/: cryptid-generator.ts  profile.ts  signal-color.ts
src/features/account/hooks/: use-cryptid-profile.tsx
src/features/account/screens/: account-onboarding-screen.tsx
src/features/account/storage/: profile-store.ts
src/features/dev/telemetry/: console-bridge.ts  event-log.ts  exporter.ts  ids.ts  index.ts  otel-config.ts  resource.ts  snapshot.ts  telemetry.ts  types.ts
src/features/map/: config.ts  index.ts
src/features/map/__tests__/: config.test.ts
src/features/map/components/: coverage-island.tsx  friend-history-island.tsx  locate-me-control.tsx  map-layers-control.tsx
src/features/map/core/: camera.ts  cell-field.ts  cell-ladder.ts  color.ts  exploration-index.ts  exploration.ts  gesture.ts  h3-grid.ts  hash.ts  hex.ts  marker-clusters.ts  masks.ts  mercator.ts  native-h3-enumerator.ts  raster.ts  readout.ts  region-session.ts  region.ts  road-lod.ts  types.ts
src/features/map/engine/: map-engine.ts
src/features/map/exploration/: exploration-source.ts  exploration-store.ts
src/features/map/hooks/: use-map-engine.ts  use-map-theme.ts
src/features/map/perf/: map-perf.ts  use-map-perf-runner.ts
src/features/map/render/: cell-overlay-paths.ts  cell-state-image.ts  dot-field-shader.ts  friend-locator-stack.tsx  friend-locator.tsx  locator-label.tsx  map-view.tsx  mask-image.ts  mask-paths.ts  region-shader.ts  render-bundle-cache.ts  reveal-mask-shader.ts  reveal-mask.ts  shader-uniforms.ts  you-locator.tsx
src/features/map/screens/: map-screen-body.tsx  map-screen.tsx  map-screen.web.tsx
src/features/map/tiles/: base64.ts  bundle-fetch.ts  decode-source.ts  fixture-source.ts  geometry-source.ts  martin-source.ts  mvt-mapping.ts  native-tile-decoder.ts  packed-geometry.ts  scg1.ts  sqlite-tile-store.ts  tile-bundle.ts  tile-bytes.ts  tile-cache.ts  tile-math.ts  utf8-pbf-reader.ts
src/features/settings/components/: app-provenance.tsx  author-id-row.tsx  debug-location-controls.tsx  event-log-panel.tsx  location-access-row.tsx  relay-only-row.tsx  transport-controls.tsx  transport-diagnostic.tsx
src/features/settings/core/: app-provenance.ts
src/features/settings/screens/: settings-screen.tsx
src/features/social/components/: bump-pairing-panel.tsx  cryptid-discovery-celebration.tsx  friend-profile-sheet.tsx  location-disclosure-gate.tsx  pair-link-action.tsx  pairing-verification-panel.tsx  stash-setting-row.tsx
src/features/social/core/: bump-detector.ts  contact-card.ts  hex.ts  history.ts  pair-link.ts  pairing-code.ts  pairing-experience.ts  pairing-figures.ts  pool.ts  presence.ts  profile.ts  rub-detector.ts  types.ts
src/features/social/hooks/: use-bump-to-pair.ts  use-location-sharing.tsx  use-pairing-haptics.ts  use-rub-to-pair.ts
src/features/social/net/: expo-location-provider.ts  location-provider.ts  location-sharing.ts  pairing-mailbox.ts  pairing-permissions.ts  persistence.ts  push-token-provider.ts  secure-keys.ts  stash-client.ts  state-store.ts  transports.ts
src/features/social/screens/: friends-screen.tsx  location-disclosure-screen.tsx
src/hooks/: use-color-scheme.web.ts
types/: vendor.d.ts
(+118 files in other folders)
