[package]
name = "iroh-location-wasm"
version = "0.1.0"
edition = "2021"
publish = false
description = "Browser WASM bridge for streetCryptid iroh location sharing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
async-channel = "2"
blake3 = "1"
chacha20poly1305 = "0.10"
console_error_panic_hook = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
hex = "0.4"
hpke = { version = "0.12", features = ["x25519"] }
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-gossip = { version = "0.101", default-features = false, features = ["net"] }
iroh-docs = { version = "0.101", default-features = false }
iroh-blobs = { version = "0.103", default-features = false }
iroh-tickets = "1"
n0-future = "0.3"
postcard = { version = "1", features = ["alloc"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1"
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]

[profile.release]
codegen-units = 1
strip = "symbols"
debug = false
lto = true
opt-level = "z"
panic = "abort"
